[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-monaco"
version = "0.0.2"
description = "A package wrapping Monaco Editor for Reflex"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Lendemor", email = "thomas.brandeho@gmail.com" }]
keywords = ["reflex", "reflex-custom-components", "monaco", "editor", "vscode"]

dependencies = ["reflex>=0.5.0"]

classifiers = ["Development Status :: 4 - Beta"]

[project.urls]
homepage = "https://monaco-demo.reflex.run/"
source = "https://github.com/Lendemor/reflex-monaco"

[project.optional-dependencies]
dev = ["build", "twine"]



[tool.setuptools.packages.find]
where = ["custom_components"]