[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-monaco"
version = "0.0.3"
description = "A package wrapping Monaco Editor for Reflex"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Lendemor", email = "thomas.brandeho@gmail.com" }]
keywords = ["reflex", "reflex-custom-components", "monaco", "editor", "vscode"]

dependencies = ["reflex>=0.5.0"]

classifiers = ["Development Status :: 4 - Beta"]

[project.urls]
homepage = "https://monaco-demo.reflex.run/"
source = "https://github.com/Lendemor/reflex-monaco"

[project.optional-dependencies]
dev = ["build", "twine"]



[tool.setuptools.packages.find]
where = ["custom_components"]


[tool.ruff]
target-version = "py310"
output-format = "concise"
lint.isort.split-on-trailing-comma = false
lint.select = ["B", "C4", "E", "ERA", "F", "FURB", "I", "N", "PERF", "PTH", "RUF", "SIM", "T", "TRY", "W"]
lint.ignore = ["B008", "D205", "E501", "F403", "SIM115", "RUF006", "RUF008", "RUF012", "TRY0"]
lint.pydocstyle.convention = "google"
include = ["custom_components/**/*.py", "monaco_demo/**/*.py"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"env.py" = ["ALL"]
"*/alembic/*" = ["ALL"]
